syntax = "proto3";
package decryption.v1;

import "google/protobuf/empty.proto";

// Service for handling decryption requests
service DecryptionService {
  // Handle public decryption request
  rpc HandlePublicDecryption(PublicDecryptionRequest) returns (PublicDecryptionResponse);
  
  // Handle user decryption request
  rpc HandleUserDecryption(UserDecryptionRequest) returns (UserDecryptionResponse);
}

// Public decryption request message
message PublicDecryptionRequest {
  uint64 public_decryption_id = 1;
  repeated bytes ciphertext_handles = 2;
  bytes domain = 3;
}

// Public decryption response message
message PublicDecryptionResponse {
  uint64 public_decryption_id = 1;
  bytes decrypted_result = 2;
  repeated bytes signatures = 3;
}

// User decryption request message
message UserDecryptionRequest {
  uint64 user_decryption_id = 1;
  repeated CiphertextContract ciphertext_contracts = 2;
  bytes user_address = 3;
  bytes domain = 4;
}

// User decryption response message
message UserDecryptionResponse {
  uint64 user_decryption_id = 1;
  bytes decrypted_result = 2;
  repeated bytes signatures = 3;
}

// Ciphertext contract message
message CiphertextContract {
  bytes contract_address = 1;
  repeated bytes ciphertext_handles = 2;
}
